# numquant

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/: copilot-instructions.md
graphs/: __init__.py  implementations.py  interface.py  main.py
numquant/: __init__.py  aggregate.py  convert.py  interface.py  main.py  window.py
numquant/funcs/: __init__.py  implementations.py  interfaces.py  stats.py
python/quantlab/: __init__.py  aggregate.py  convert.py  interface.py  main.py  window.py
python/quantlab/funcs/: __init__.py  implementations.py
quantlab/: __init__.py  __init__.pyi  aggregate.py  convert.py  interface.py  main.py  main.pyi  types.py  window.py
quantlab/arrays/: aggregate.py  convert.py  main.py  window.py
quantlab/frames/: aggregate.py  convert.py  main.py  seasonality.py  window.py
quantlab/frames/graphs/: __init__.py  implementations.py  interface.py  main.py
quantlab/funcs/: __init__.py  cross_rank.py  implementations.py  interfaces.py  skewness.py  stats.py
quantlab/graphs/: __init__.py  implementations.py  interface.py  main.py
quantlab/interfaces/: core.py  executors.py
rust/: Cargo.toml
rust/src/: lib.rs
src/: README.md  __init__.py  _lib.py  _types.py  aggregate.py  arrays.py  convert.py  executors.py  expressions.py  interface.py  interfaces.py  main.py  main.rs  window.py
src/arrays/: aggregate.py  main.py
src/expressions/: __init__.py  aggregate.py  convert.py  interfaces.py  non_reduce.py  operations.py  window.py
src/frames/: aggregate.py  main.py  seasonality.py
src/frames/graphs/: design.py  (+4 more)
src/funcs/: __init__.py  conversions.py  cross_rank.py  horizontal.py  implementations.py  interfaces.py  kurtosis.py  main.py  moving.py  skewness.py  stats.py
src/interfaces/: core.py  types.py
src/mapexpr/: __init__.py  _lib.py
src/numquant/: __init__.py  _lib.py  _types.py  aggregate.py  convert.py  expressions.py  interface.py  main.py  numquant.cp313-win_amd64.pyd  numquant.pyi  window.py
tests/: groups.py  main.py  manager.py  plots.py  structs.py
typings/: numba.pyi
typings/numba/: __init__.pyi
typings/numbagg/: __init__.pyi
(+3 files in other folders)
