[project]
name = "numquant"
version = "0.21"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "bn-typed",
    "bottleneck>=1.5.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numbagg>=0.9.0",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "pyright>=1.1.401",
    "ruff>=0.11.12",
]

[tool.uv.sources]
bn-typed = { git = "https://github.com/OutSquareCapital/bn-typed.git" }
