[project]
name = "numquant"
description = "Add your description here"
version = "0.3"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bn-typed",
    "bottleneck>=1.5.0",
    "numba>=0.61.2",
    "numbagg>=0.9.0",
    "numpy>=2.2.6",
    "rustats",
]
[tool.uv.sources]
rustats = { git = "https://github.com/OutSquareCapital/rustats.git" }
numbagg = { git = "https://github.com/numbagg/numbagg.git" }
bn-typed = { git = "https://github.com/OutSquareCapital/bottleneck-stubs.git" }
