[package]
name = "numquant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "numquant"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.25.0"
pyo3 = "0.25.0"
rayon = "1.10.0"
[profile.release]
lto = true
rayon = true